--- a/sayuri/Cargo.toml
+++ b/sayuri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "kizuna"
+name = "sayuri"
 version = "0.1.0"
 edition = "2024"
 
@@ -10,4 +10,4 @@ windows = { version = "0.62.2", features = ["Win32_System_Memory", "Win32_System
 libc =  "0.2.177"
 
 [dependencies]
-kizuna-proc = { path = "../kizuna-proc" }
+sayuri-proc = { path = "../sayuri-proc" }
