--- a/sayuri/Cargo.toml
+++ b/sayuri/Cargo.toml
@@ -2,6 +2,10 @@
 name = "sayuri"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+description = "Useful Rust utilities"
+repository = "https://github.com/MolotovCherry/sayuri"
+readme = "../README.md"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.62.2", features = ["Win32_System_Memory", "Win32_System_Performance", "Win32_System_Threading"] }
@@ -10,4 +14,4 @@ windows = { version = "0.62.2", features = ["Win32_System_Memory", "Win32_System
 libc =  "0.2.177"
 
 [dependencies]
-sayuri-proc = { path = "../sayuri-proc" }
+sayuri-proc = "0.1.0"
