--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
 [workspace]
 resolver = "3"
 members = ["sayuri", "sayuri-proc"]
+
+[workspace.package]
+license = "MIT"
+repository = "https://github.com/MolotovCherry/sayuri"
+readme = "RADME.md"
