--- a/sayuri/Cargo.toml
+++ b/sayuri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sayuri"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2024"
 license = "MIT"
 description = "Useful Rust utilities"
@@ -8,7 +8,7 @@ repository = "https://github.com/MolotovCherry/sayuri"
 readme = "../README.md"
 
 [target.'cfg(windows)'.dependencies]
-windows = { version = "0.62.2", features = ["Win32_System_Memory", "Win32_System_Performance", "Win32_System_Threading"] }
+windows = { version = "0.62.2", features = ["Win32_System_Performance"] }
 
 [target.'cfg(unix)'.dependencies]
 libc =  "0.2.177"
